--- a/css/media.css
+++ b/css/media.css
@@ -2,6 +2,9 @@
             
             @media (max-width: 575.98px) {
                 /* header banner start */
+                .menu ul li a {
+                    font-size: 18px;
+                }
                 .logo {
                     width: 75%;
                 }
@@ -14,6 +17,7 @@
                 .b_content p {
                     font-size: 18px;
                     margin-top: 6px;
+                    line-height: 26px;
                 }
                 .c_btn {
                     width: 150px;
@@ -26,18 +30,18 @@
                 }
                 /* feature start */
                 .feature,
+                .team,
                 .download,
                 .contact {
-                    padding-top: 50px;
-                    padding-bottom: 45px;
+                    padding-top: 60px;
+                    padding-bottom: 60px;
                 }
                 .f_icon i {
-                    margin-top: 35px;
                     font-size: 45px;
                 }
                 .f_text h2 {
-                    margin-top: 30px;
-                    margin-bottom: 10px;
+                    margin-top: 25px;
+                    margin-bottom: 6px;
                     font-size: 17px;
                 }
                 /* work start */
@@ -64,20 +68,21 @@
                     margin-right: 12px;
                 }
                 /* testimonial start */
-                .slider_img img {
+                /* .slider_img img {
                     width: auto;
-                }
+                } */
                 .slider_content {
-                    margin-top: 6%;
+                    margin-top: 10%;
                     margin-left: 4%;
-                    margin-bottom: 12%;
+                    margin-bottom: 16%;
                 }
                 .slider_content p {
-                    font-size: 16px;
-                    line-height: 25px;
+                    font-size: 22px;
+                    line-height: 34px;
                 }
                 .slider_content p span {
-                    font-size: 10px;
+                    font-size: 16px;
+                    line-height: 0px;
                 }
                 .cid {
                     margin-right: 16%;
@@ -98,16 +103,16 @@
                     margin-top: 8px;
                 }
                 .d_btn button {
-                    width: 260px;
-                    height: 40px;
-                    font-size: 11px;
+                    width: 160px;
+                    height: 38px;
+                    font-size: 12px;
                 }
                 /* contact start */
                 .locate {
                     margin-bottom: 35px;
                 }
                 .co_h4 {
-                    margin-bottom: 10px;
+                    margin-bottom: 6px;
                     font-size: 16px;
                 }
                 .social {
@@ -119,13 +124,16 @@
                 }
                 /* footer start */
                 .f_content p {
-                    font-size: 13px;
+                    font-size: 16px;
                 }
             }
             /*Small devices (landscape phones, 576px and up)*/
             
             @media (min-width: 576px) and (max-width: 767.98px) {
                 /* header banner start */
+                .menu ul li a {
+                    font-size: 18px;
+                }
                 .b_content {
                     margin-top: 60px;
                 }
@@ -151,13 +159,12 @@
                     padding-bottom: 60px;
                 }
                 .f_icon i {
-                    margin-top: 40px;
-                    font-size: 60px;
+                    font-size: 55px;
                 }
                 .f_text h2 {
                     margin-top: 30px;
-                    margin-bottom: 10px;
-                    font-size: 17px;
+                    margin-bottom: 8px;
+                    font-size: 18px;
                 }
                 /* work start */
                 .box4 .title {
@@ -175,16 +182,16 @@
                 }
                 /* testimonial start */
                 .slider_content {
-                    margin-top: 2%;
-                    margin-left: 2%;
-                    margin-bottom: 6%;
+                    margin-top: 4%;
+                    margin-left: 3%;
+                    margin-bottom: 9%;
                 }
                 .slider_content p {
-                    font-size: 24px;
-                    line-height: 31px;
+                    font-size: 27px;
+                    line-height: 42px;
                 }
                 .slider_content p span {
-                    font-size: 12px;
+                    font-size: 18px;
                 }
                 .cid {
                     margin-right: 15%;
@@ -207,18 +214,28 @@
                 }
                 .co_h4 {
                     margin-bottom: 10px;
+                    font-size: 18px;
                 }
                 .social {
                     margin-bottom: 35px;
                 }
                 .common_p {
+                    font-size: 16px;
                     line-height: 22px;
+                }
+                /* footer start */
+                .f_content p {
+                    font-size: 19px;
                 }
             }
             /*Medium devices (tablets, 768px and up)*/
             
             @media (min-width: 768px) and (max-width: 991.98px) {
                 /* header banner start */
+                /* header banner start */
+                .menu ul li a {
+                    font-size: 18px;
+                }
                 .b_content {
                     margin-top: 60px;
                 }
@@ -234,13 +251,12 @@
                     padding-bottom: 80px;
                 }
                 .f_icon i {
-                    margin-top: 40px;
                     font-size: 60px;
                 }
                 .f_text h2 {
                     margin-top: 30px;
                     margin-bottom: 12px;
-                    font-size: 17px;
+                    font-size: 18px;
                 }
                 /* work start */
                 .box4 .title {
@@ -258,16 +274,16 @@
                 }
                 /* testimonial start */
                 .slider_content {
-                    margin-top: 2%;
-                    margin-left: 2%;
-                    margin-bottom: 6%;
+                    margin-top: 4%;
+                    margin-left: 3%;
+                    margin-bottom: 9%;
                 }
                 .slider_content p {
-                    font-size: 24px;
-                    line-height: 31px;
+                    font-size: 27px;
+                    line-height: 42px;
                 }
                 .slider_content p span {
-                    font-size: 12px;
+                    font-size: 18px;
                 }
                 .cid {
                     margin-right: 15%;
@@ -289,20 +305,34 @@
                 }
                 .co_h4 {
                     margin-bottom: 10px;
+                    font-size: 18px;
                 }
                 .social {
                     margin-bottom: 35px;
                 }
                 .common_p {
+                    font-size: 16px;
                     line-height: 22px;
+                }
+                /* footer start */
+                .f_content p {
+                    font-size: 19px;
                 }
             }
             /*Large devices (desktops, 992px and up)*/
             
             @media (min-width: 992px) and (max-width: 1199.98px) {
+                /* header banner start */
+                .menu ul li a {
+                    font-size: 18px;
+                }
+                .c_btn {
+                    width: 260px;
+                    height: 55px;
+                    font-size: 18px;
+                }
                 /* feature start */
                 .f_icon i {
-                    margin-top: 45px;
                     font-size: 60px;
                 }
                 /* work start */
@@ -318,14 +348,14 @@
                 }
                 /* testimonial start */
                 .slider_content {
-                    margin-top: 13%;
+                    margin-top: 4%;
                 }
                 .slider_content p {
-                    font-size: 24px;
-                    line-height: 31px;
+                    font-size: 30px;
+                    line-height: 44px;
                 }
                 .slider_content p span {
-                    font-size: 12px;
+                    font-size: 18px;
                 }
                 .cid {
                     margin-right: 4%;
@@ -347,14 +377,14 @@
                 }
                 /* footer start */
                 .f_content p {
-                    font-size: 13px;
+                    font-size: 20px;
                 }
                 .co_h4 {
                     margin-bottom: 14px;
-                    font-size: 15px;
+                    font-size: 20px;
                 }
                 .common_p {
-                    font-size: 13px;
+                    font-size: 16px;
                 }
             }
             /*Extra Extra large devices (Extra large desktops, 1400px and up)*/
@@ -378,27 +408,28 @@
                     padding-bottom: 95px;
                 }
                 .menu ul li a {
-                    font-size: 18px;
+                    font-size: 24px;
                 }
                 .b_content p {
-                    margin-top: 15px;
-                    font-size: 25px;
+                    font-size: 32px;
+                    line-height: 45px;
                 }
                 .b_content button {
                     margin-top: 48px;
                     margin-bottom: 140px;
                 }
                 .c_btn {
-                    width: 290px;
-                    height: 60px;
-                    font-size: 17px;
+                    width: 295px;
+                    height: 70px;
+                    font-size: 22px;
                 }
                 /* feature start */
                 .f_icon i {
                     font-size: 75px;
                 }
                 .f_text h2 {
-                    font-size: 24px;
+                    margin-bottom: 15px;
+                    font-size: 30px;
                 }
                 .f_text p {
                     font-size: 20px;
@@ -412,15 +443,15 @@
                 }
                 /* testimonial start */
                 .slider_content {
-                    margin-top: 19%;
+                    margin-top: 5%;
                     margin-left: 2%;
                 }
                 .slider_content p {
-                    font-size: 38px;
-                    line-height: 49px;
+                    font-size: 48px;
+                    line-height: 72px;
                 }
                 .slider_content p span {
-                    font-size: 18px;
+                    font-size: 30px;
                 }
                 .cid {
                     margin-right: 5%;
@@ -443,8 +474,8 @@
                 }
                 /* contact start */
                 .co_h4 {
-                    margin-bottom: 20px;
-                    font-size: 20px;
+                    margin-bottom: 18px;
+                    font-size: 21px;
                 }
                 .common_p {
                     font-size: 18px;
@@ -457,6 +488,6 @@
                     padding: 40px 0;
                 }
                 .f_content p {
-                    font-size: 18px;
+                    font-size: 26px;
                 }
             }
